add reset at end

--- a/public/myvideos.html
+++ b/public/myvideos.html
@@ -65,7 +65,7 @@
       </div>     
     </div>
     
-    <button id="play_game" class="button0">Play Game</button>
+    <button id="play_game" class="button0">Play Pagerank</button>
     
 </body>
 
