--- a/public/winner.html
+++ b/public/winner.html
@@ -18,7 +18,7 @@
 <body>
     <header>
       <div class="winnerHeader">
-        <h1 class="main-h1">The winner is...</h1>
+        <h1 class="main-h1">Your favarite is...</h1>
       </div>
     </header>
 
@@ -31,7 +31,7 @@
     </div>
   
      <div id="reload" class="reload"><i class="fas fa-redo-alt"></i> </div>
-  
+      <button id="reset" class="reload">Reset </button>
  
 </body>
 </html>
