--- a/public/preview.html
+++ b/public/preview.html
@@ -14,7 +14,7 @@
 
 <body> 
   <header>
-      <h1>Video Preview</h1>
+      <h1>Submitted successfully! Video Preview...</h1>
   </header>
 
   <div class="center">
